<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PurchaseActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/barra_purchase"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="386dp"
        android:layout_height="633dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barra_purchase"
        app:layout_constraintVertical_bias="0.264">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/purchase_title"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/purchase_products" />

        <ListView
            android:id="@+id/listProductos"
            android:layout_width="match_parent"
            android:layout_height="112dp" />

        <Button
            android:id="@+id/btnAgregar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/purchase_button_get" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="126dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="146dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/purchase_list_of_products" />

            <ListView
                android:id="@+id/listCarrito"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <EditText
            android:id="@+id/edtRutaInicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/pay_route_from"
            android:inputType="text" />

        <EditText
            android:id="@+id/edtRutaFin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/pay_route_to" />

        <Button
            android:id="@+id/btnRuta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pay_button_check_route" />

        <Button
            android:id="@+id/btnComprar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/purchase_button_pay" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>