<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RefundActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/barra_refund"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="386dp"
        android:layout_height="633dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barra_refund">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/refund_title"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtCodigoRefund"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/refund_info"
            android:inputType="text" />

        <Button
            android:id="@+id/btnEscanearRefund"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/refund_button_scanner" />

        <Button
            android:id="@+id/btnVerificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Revisar codigo" />

        <TextView
            android:id="@+id/textRefund"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/refund_advice" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/refund_reason"
            android:inputType="text" />

        <Button
            android:id="@+id/btnEvidencias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/refund_button_picture" />

        <ImageView
            android:id="@+id/imgMotivo"
            android:layout_width="match_parent"
            android:layout_height="108dp"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/btnDevolver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/refund_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>